--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
   font-size: 10px;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--dark);
+  background-color: var(--light);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
