--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ button:focus-visible {
   min-height: inherit;
   display: grid;
   grid-template-rows: auto 1fr;
-  grid-auto-rows: 1fr;
+  /* grid-auto-rows: 1fr; */
 }
 
 @media (prefers-color-scheme: light) {
